trying to fix glitch on mobile

--- a/round-2/search-embed.css
+++ b/round-2/search-embed.css
@@ -328,7 +328,7 @@ input[type="reset"], input[type="button"], input[type="submit"]
 
 .input-recalls {
 	clear: both !important;
-	height: 40px  !important;
+	height: 60px  !important;
 	padding: 0px 0px 0px 12px !important;
 	font-size: 18px !important;
 	line-height: 1.4375;
